update: results chapter. add: table of all trials in the appendix.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -45,6 +45,15 @@
 \input{sections/userstudy}
 \input{sections/conclusion}
 
+\appendix
+\clearpage
+\addcontentsline{toc}{chapter}{Appendices}
+\chapter*{Appendices}
+
+\input{sections/appendixA}
+\input{sections/appendixB}
+
+
 %  !!!!!!!!!!!!!!!!!!!!!! !!!!!!!!!!!!!!!!!!!!!! !!!!!!!!!!!!!!!!!!!!!! !!!!!!!!!!!!!!!!!!!!!! !!!!!!!!!!!!!!!!!!!!!! !!!!!!!!!!!!!!!!!!!!!!
 % Please ensure that the bibliography is consistent! That means (amongst other things): 
 %- Conferences should always be named the same. I.e., if you cite papers that appeared at the same conference series, check that the names are identical in these two entries (besides the year)
