--- a/tex/references.bib
+++ b/tex/references.bib
@@ -1,3 +1,10 @@
+@misc{github,
+  author       = {Tymur Mykhalievskyi},
+  title        = {Source Code for Thesis Project},
+  year         = {2025},
+  url          = {https://github.com/GAtemROU/Thesis-Project},
+}
+
 @inproceedings{lingoturk,
   title={LingoTurk: managing crowdsourced tasks for psycholinguistics},
   author={Pusse, Florian and Sayeed, Asad and Demberg, Vera},
