--- a/analysis/preprocessing_and_init_analysis.ipynb
+++ b/analysis/preprocessing_and_init_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1710,7 +1710,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml2024",
+   "display_name": "thesis",
    "language": "python",
    "name": "python3"
   },
@@ -1724,7 +1724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
